adjuested style reset to normalize.css, made some color changes, fixed weird bottom whitespace'

--- a/potluck-planner/src/index.css
+++ b/potluck-planner/src/index.css
@@ -1,13 +1,3 @@
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 62.5%;
-}
-
 body {
   font-family: 'Lato', sans-serif;
   -webkit-font-smoothing: antialiased;
